--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "rxjs": "^6.6.3",
     "vue-rx": "^6.2.0",
     "vuejs-clipper": "^3.0.2",
-    "yarn": "^1.22.5"
+    "yarn": "^1.22.5",
+    "epic-spinners": "^1.1.0",
+    "hammerjs": "^2.0.8"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2",
