--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hammerjs": "^2.0.8",
     "nuxt": "^2.14.4",
     "rxjs": "^6.6.3",
+    "smoothscroll-polyfill": "^0.4.4",
     "tiptap-vuetify": "^2.24.0",
     "vue-rx": "^6.2.0",
     "vue-trix": "github:hanhdt/vue-trix",
