--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "yarn": "^1.22.5"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.14.7",
     "@nuxtjs/vuetify": "^1.11.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2"
